# opal

./: .gitignore  CMakeLists.txt  README.md  dsa-primer.sln  dsa-primer.vcxproj  dsa-primer.vcxproj.filters  heap-sort.h  helpers.h  main.cpp  merge-sort.h  opal.natvis  priority-queue.h  queue.h  quick-sort.h  todo.md
.github/workflows/: cmake.yml
cmake/: compiler-options.cmake  compiler-warnings.cmake  sanitizers.cmake
docs/: containers.md  json-reader.md  json-writer.md  logging.md  memory.md  program-arguments.md  threading.md
include/opal/: allocator.h  assert.h  bit.h  casts.h  clonable-base.h  common.h  defines.h  delegate.h  enum-flags.h  error-codes.h  exceptions.h  file-system.h  hash.h  iterator.h  logging.h  math-base.h  math-constants.h  paths.h  program-arguments.h  rng.h  source-location.h  string-encoding.h  thread.h  time.h  type-traits.h  types.h  variant.h
include/opal/container/: array-view.h  array.h  deque.h  dynamic-array.h  expected.h  hash-map.h  hash-set.h  in-place-array.h  json-reader.h  json-writer.h  ref.h  scope-ptr.h  shared-ptr.h  span.h  stack-array.h  stack.h  string-encoding.h  string-format.h  string-hash.h  string-view.h  string.h
include/opal/math/: bounds2.h  bounds3.h  dual-quaternion.h  matrix.h  normal3.h  point2.h  point3.h  point4.h  quaternion.h  rotator.h  transform.h  vector2.h  vector3.h  vector4.h
include/opal/sort/: insertion-sort.h  key-indexed-counting.h  merge-sort.h  quick-sort.h
include/opal/threading/: channel-mpmc.h  channel-spsc.h  condition-variable.h  cpu-pause.h  mutex.h  signal.h  thread-pool.h  thread.h  wait-policy.h
src/: CMakeLists.txt  allocator.cpp  bit.cpp  condition-variable.cpp  file-system.cpp  hash.cpp  helpers.cpp  json-reader.cpp  json-writer.cpp  logging.cpp  main.cpp  mutex.cpp  paths.cpp  program-arguments.cpp  rng.cpp  signal.cpp  string-encoding.cpp  string.cpp  thread-pool.cpp  thread.cpp  time.cpp
test/: CMakeLists.txt  allocator-test.cpp  array-test.cpp  array-view-test.cpp  bit-test.cpp  bounds2-test.cpp  bounds3-test.cpp  common-test.cpp  delegate-test.cpp  deque-test.cpp  dual-quaternion-test.cpp  dynamic-array-test.cpp  enum-flags-test.cpp  expected-test.cpp  file-system-test.cpp  hash-map-test.cpp  hash-set-test.cpp  in-place-array-test.cpp  json-reader-test.cpp  json-value-test.cpp  json-writer-test.cpp  logging-test.cpp  main-test.cpp  math-base-test.cpp  matrix-test.cpp  normal3-test.cpp  paths-test.cpp  point2-test.cpp  point3-test.cpp  point4-test.cpp  program-arguments-test.cpp  quaternion-test.cpp  rng-test.cpp  rotator-test.cpp  scope-ptr-test.cpp  shared-ptr-test.cpp  sort-test.cpp  span-test.cpp  string-format-test.cpp  string-test.cpp  (+10 more)
